tests/ui/attr_unrecognized_param.stderr
error: fixcol-derive error: Unrecognized parameter "thing".
 --> tests/ui/attr_unrecognized_param.rs:7:25
  |
7 |     #[fixcol(width = 5, thing = true)]
  |                         ^^^^^
